[gd_scene load_steps=12 format=3 uid="uid://cal8ytqtr2hyq"]

[ext_resource type="Script" path="res://Scripts/Llave.gd" id="1_cjv6o"]
[ext_resource type="Texture2D" uid="uid://c1nalpqbrauea" path="res://Assets/Objetos/key.png" id="2_j7b5f"]
[ext_resource type="AudioStream" uid="uid://coab64fagrk5q" path="res://Sound/COLORALPHA 50 Menu Interface SFX/MP3/MI_SFX 05.mp3" id="3_6xakg"]
[ext_resource type="AudioStream" uid="uid://b7ueiysuogty3" path="res://Sound/Custom Sounds/Doors, Hardware, Handle, Movement SND25099.wav" id="4_84ha1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nse5d"]
size = Vector2(18, 16)

[sub_resource type="Animation" id="Animation_s8xjy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_j7b5f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j7iy3"]
resource_name = "Shine"
length = 1.00002
loop_mode = 2
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_j7b5f"), ExtResource("2_j7b5f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppqum"]
_data = {
"RESET": SubResource("Animation_s8xjy"),
"Shine": SubResource("Animation_j7iy3")
}

[sub_resource type="Animation" id="Animation_0l8o5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2yg6p"]
resource_name = "wobble"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1.5), Vector2(0, 0), Vector2(0, 1.5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fo7e3"]
_data = {
"RESET": SubResource("Animation_0l8o5"),
"wobble": SubResource("Animation_2yg6p")
}

[node name="Llave" type="Area2D"]
position = Vector2(0, -1.43885)
script = ExtResource("1_cjv6o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_j7b5f")
hframes = 5
region_filter_clip_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nse5d")

[node name="Sprite_Animation" type="AnimationPlayer" parent="."]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_ppqum")
}

[node name="Position_Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fo7e3")
}

[node name="SFX" type="Node" parent="."]

[node name="Key_Sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_6xakg")

[node name="Door_Sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_84ha1")
