[gd_scene load_steps=4 format=3 uid="uid://ct0enejc01rdd"]

[ext_resource type="Script" path="res://Scripts/Llave.gd" id="1_cjv6o"]
[ext_resource type="Texture2D" uid="uid://dk4l2qwdqvq43" path="res://Resources/FullHeart.tres" id="2_qtjt3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nse5d"]
size = Vector2(18, 16)

[node name="Llave" type="Area2D"]
script = ExtResource("1_cjv6o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qtjt3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nse5d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
